refactor detail fragment